--- a/pages/index.pug
+++ b/pages/index.pug
@@ -37,30 +37,30 @@ html(lang="en")
                 .swiper.index_card_1.accident_in 
                     .swiper-wrapper
                         .swiper-slide
-                            .accident_card 
+                            a(href="#").accident_card 
                                 span.circle
                                 span.number 1
                                 p Заглушите двигатель и не меняйте положение автомобиля.
                         .swiper-slide
-                            .accident_card 
+                            a(href="#").accident_card 
                                 span.circle
                                 span.number 2
                                 p Включите аварийную сигнализацию.
                         .swiper-slide
-                            .accident_card 
+                            a(href="#").accident_card 
                                 span.circle
                                 span.number 3
                                 p Выставьте знак аварийной остановки на 15 метров от ДТП.
                         .swiper-slide
-                            .accident_card 
+                            a(href="#").accident_card 
                                 span.circle
                                 span.number 4
                                 p 
                                     | Вызовите аварийного комиссара позвонив на #[br]
-                                    a(href="#") 50-50-50
+                                    span 50-50-50
                                     | . 
                         .swiper-slide
-                            .accident_card 
+                            a(href="#").accident_card 
                                 span.circle
                                 span.number 5
                                 p Далее следуйте подсказкам полученым от нашего оператора.
@@ -142,49 +142,49 @@ html(lang="en")
                 h2.cards_in_title Услуги аварийного комиссара в Калининграде служба «50-50-50»
                 .swiper-wrapper 
                     .swiper-slide
-                        .card_item 
+                        a(href="#").card_item 
                             img.card_img(src="./images/prices_card_1.png", alt="")
                             .card_text 
                                 .text_title Выезд аварийного комиссара #[br] на место ДТП
                                 .text_subtitle Бесплатно
                     .swiper-slide
-                        .card_item 
+                        a(href="#").card_item 
                             img.card_img(src="./images/prices_card_2.png", alt="")
                             .card_text 
                                 .text_title Фото и видеофиксация места ДТП
                                 .text_subtitle Бесплатно при заказе оформления
                     .swiper-slide
-                        .card_item 
+                        a(href="#").card_item 
                             img.card_img(src="./images/prices_card_3.png", alt="")
                             .card_text 
                                 .text_title Консультация и оформление ДТП
                                 .text_subtitle 900 рублей
                     .swiper-slide
-                        .card_item 
+                        a(href="#").card_item 
                             img.card_img(src="./images/prices_card_4.png", alt="")
                             .card_text 
                                 .text_title Эвакуация авто с места ДТП
                                 .text_subtitle Бесплатно
                     .swiper-slide
-                        .card_item 
+                        a(href="#").card_item 
                             img.card_img(src="./images/prices_card_5.png", alt="")
                             .card_text 
                                 .text_title Подготовка документов для обращения в страховую компанию
                                 .text_subtitle От  1 000 рублей
                     .swiper-slide
-                        .card_item 
+                        a(href="#").card_item 
                             img.card_img(src="./images/prices_card_6.png", alt="")
                             .card_text 
                                 .text_title Юридическое сопровождение по последствиям ДТП
                                 .text_subtitle От  1 000 рублей
                     .swiper-slide
-                        .card_item 
+                        a(href="#").card_item 
                             img.card_img(src="./images/prices_card_7.png", alt="")
                             .card_text 
                                 .text_title Независимая экспертиза повреждений автомобиля
                                 .text_subtitle От 4 000 рублей
                     .swiper-slide
-                        .card_item 
+                        a(href="#").card_item 
                             img.card_img(src="./images/prices_card_8.png", alt="")
                             .card_text 
                                 .text_title Ремонт автомобиля после ДТП
@@ -242,12 +242,12 @@ html(lang="en")
                 .swiper.card_1.card_end 
                     .swiper-wrapper
                         .swiper-slide
-                            .card_content 
+                            a(href="#").card_content 
                                 img(src="./images/example_slide_11.png", alt="")
                                 .text Часто бывает, что даже из-за мелких царапин водители не могут договориться самостоятельно, тогда по помощь приходит (приезжает) наш человек. Если без ГИБДД нельзя, то вызовем из нужного района.
 
                         .swiper-slide
-                            .card_content 
+                            a(href="#").card_content 
                                 img(src="./images/example_slide_22.png", alt="")
                                 .text 
                                     |Совместная работа с ГИБДД, скорой
@@ -257,7 +257,7 @@ html(lang="en")
                                     |оценка ущерба и помощь в
                                     | «выбивании» КАСКО за «тотал».
                         .swiper-slide
-                            .card_content 
+                            a(href="#").card_content 
                                 img(src="./images/example_slide_33.png", alt="")
                                 .text  Оформлено без лишних эмоций и без привлечения ГИБДД по европротоколу. Нас вызвал виновник, при оформлении вину признал. Эвакуация, помощь со страховой, ремонт на нашем СТО.                                
                 .example_card_1_pagination
@@ -314,7 +314,7 @@ html(lang="en")
                         a(href="#") Вызвать ГИБДД 
 
                     .index_card 
-                        h4 Как вызывать ГИБДД?
+                        h4 Как вызывать Скорую?
                         p 
                             | В Калининграде вызвать скорую медицинскую помощь с мобильного телефона можно по единому номеру 
                             span 103.
@@ -322,7 +322,7 @@ html(lang="en")
                         a(href="#") Вызвать Скорую
 
                     .index_card 
-                        h4 Как вызывать ГИБДД?
+                        h4 Сколько стоят услуги?
                         p 
                             | Выезд нашего аварийного комиссара на место ДТП с Вашим участием бесплатный. Стоимость комплексной помощи в фиксации и оформлении европротокола (когда ДТП оформляется без участия ГИБДД) – 900 рублей.
                         
@@ -338,5 +338,22 @@ html(lang="en")
 
                 p 
                     | Нередко случаются ситуации, когда авария незначительная и без пострадавших, но при этом стороны не могут прийти к соглашению, кто виновен. Чтобы не привлекать дорожную инспекцию к ситуации, стоит обратиться к аварийному комиссару. Опытный специалист проведет оценку ситуации и проработает все дорожные улики и свидетельства. Таким образом, будет установлен ущерб, причиненным сторонам. Проще говоря, такой спецпосредник поможет сторонам в конце концов справедливо договориться.
+            .bottom_text_media 
+                h2.main_title Стиль и размер h2-заголовка
+                p.description Идейные соображения высшего порядка, а также сложившаяся структура организации в значительной степени обуславливает создание существенных финансовых и административных условий. Повседневная практика показывает, что рамки и место обучения кадров требуют определения и уточнения существенных финансовых и административных условий.
+                h3.main_title_2 Стиль и размер h3-заголовка
+                p.description Значимость этих проблем настолько очевидна, что рамки и место обучения кадров требуют определения и уточнения новых предложений. Таким образом сложившаяся структура организации требуют определения и уточнения модели развития.
+                h4.description.title Стиль маркированного списка:
+                .ul 
+                    p.li —  Значимость этих проблем настолько очевидна
+                    p.li —  Разнообразный и богатый опыт
+                    p.li —  Ссоответствует насущным потребностям
+                h4.description.title Стиль нумерованного списка:
+                .ol
+                    p.li 1. Значимость этих проблем настолько очевидна
+                    p.li 2. Разнообразный и богатый опыт
+                    p.li 3. Ссоответствует насущным потребностям
+                p.description.last Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.
+
 
         include ../includes/footer
