--- a/pages/journal.pug
+++ b/pages/journal.pug
@@ -22,7 +22,7 @@ html(lang="en")
                 .journal_cards.d-flex.flex-wrap.align-items-start
                     - let arr = ["Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в Калининграде о порядке.", "Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в", "Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в", "Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в Калининграде о порядке.", "Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в","Аварийный комиссар в Калининграде о порядке действий при ДТП комиссар в"]
                     each val in arr
-                        .card_item 
+                        a(href="#").card_item 
                             img(src="./images/journal_card.png", alt="")
                             .card_item_body 
                                 .date 20.11.2020
