--- a/pages/magazine.pug
+++ b/pages/magazine.pug
@@ -39,23 +39,23 @@ html(lang="en")
 
                 span.magazine_list_title Стиль маркированного списка:
 
-                ul 
-                    li —  Значимость этих проблем настолько очевидна
+                .ul 
+                    p.li —  Значимость этих проблем настолько очевидна
 
-                    li —  Разнообразный и богатый опыт
+                    p.li —  Разнообразный и богатый опыт
 
-                    li —  Ссоответствует насущным потребностям
+                    p.li —  Ссоответствует насущным потребностям
 
                 span.magazine_list_title Стиль нумерованного списка:
 
-                ol 
-                    li 1. Значимость этих проблем настолько очевидна
+                .ol 
+                    p.li 1. Значимость этих проблем настолько очевидна
 
-                    li 2. Разнообразный и богатый опыт
+                    p.li 2. Разнообразный и богатый опыт
                     
-                    li 3. Ссоответствует насущным потребностям
+                    p.li 3. Ссоответствует насущным потребностям
 
-                p Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.
+                p.last Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.
 
 
         include ../includes/footer
