--- a/pages/price.pug
+++ b/pages/price.pug
@@ -31,15 +31,15 @@ html(lang="en")
                     h3.main_title_2 Стиль и размер h3-заголовка
                     p.description Значимость этих проблем настолько очевидна, что рамки и место обучения кадров требуют определения и уточнения новых предложений. Таким образом сложившаяся структура организации требуют определения и уточнения модели развития.
                     h4.description.title Стиль маркированного списка:
-                    ul 
-                        li —  Значимость этих проблем настолько очевидна
-                        li —  Разнообразный и богатый опыт
-                        li —  Ссоответствует насущным потребностям
+                    .ul 
+                        p.li —  Значимость этих проблем настолько очевидна
+                        p.li —  Разнообразный и богатый опыт
+                        p.li —  Ссоответствует насущным потребностям
                     h4.description.title Стиль нумерованного списка:
-                    ol
-                        li Значимость этих проблем настолько очевидна
-                        li Разнообразный и богатый опыт
-                        li Ссоответствует насущным потребностям
+                    .ol
+                        p.li 1. Значимость этих проблем настолько очевидна
+                        p.li 2. Разнообразный и богатый опыт
+                        p.li 3. Ссоответствует насущным потребностям
                     p.description.last Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.
                 .text_right
                     .data_list
@@ -55,7 +55,7 @@ html(lang="en")
                         .datas.d-flex.align-items-center.justify-content-between
                             p.data_name Оформление документов для ГИБДД
                             span.data_value 2 000 руб.
-                    .main_title_2 Другие наши услуги
+                    .main_title_2.links_title Другие наши услуги
                     ul.links 
                         li 
                             a(href="#") Фото и видеофиксация ДТП 
