--- a/pages/prices.pug
+++ b/pages/prices.pug
@@ -19,42 +19,42 @@ html(lang="en")
                 )
             
             .main_container.cards.d-flex.flex-wrap.align-items-start
-                .card_item 
+                a(href="#").card_item 
                     img.card_img(src="./images/prices_card_1.png", alt="")
                     .card_text 
                         .text_title Выезд аварийного комиссара #[br] на место ДТП
                         .text_subtitle Бесплатно
-                .card_item 
+                a(href="#").card_item 
                     img.card_img(src="./images/prices_card_2.png", alt="")
                     .card_text 
                         .text_title Фото и видеофиксация места ДТП
                         .text_subtitle Бесплатно при заказе оформления
-                .card_item 
+                a(href="#").card_item 
                     img.card_img(src="./images/prices_card_3.png", alt="")
                     .card_text 
                         .text_title Консультация и оформление ДТП
                         .text_subtitle 900 рублей
-                .card_item 
+                a(href="#").card_item 
                     img.card_img(src="./images/prices_card_4.png", alt="")
                     .card_text 
                         .text_title Эвакуация авто с места ДТП
                         .text_subtitle Бесплатно
-                .card_item 
+                a(href="#").card_item 
                     img.card_img(src="./images/prices_card_5.png", alt="")
                     .card_text 
                         .text_title Подготовка документов для обращения в страховую компанию
                         .text_subtitle От  1 000 рублей
-                .card_item 
+                a(href="#").card_item 
                     img.card_img(src="./images/prices_card_6.png", alt="")
                     .card_text 
                         .text_title Юридическое сопровождение по последствиям ДТП
                         .text_subtitle От  1 000 рублей
-                .card_item 
+                a(href="#").card_item 
                     img.card_img(src="./images/prices_card_7.png", alt="")
                     .card_text 
                         .text_title Независимая экспертиза повреждений автомобиля
                         .text_subtitle От 4 000 рублей
-                .card_item 
+                a(href="#").card_item 
                     img.card_img(src="./images/prices_card_8.png", alt="")
                     .card_text 
                         .text_title Ремонт автомобиля после ДТП
