--- a/pages/rates.pug
+++ b/pages/rates.pug
@@ -24,10 +24,10 @@ html(lang="en")
                         .card_title Минимум
                         .card_subtitle Только оформление
                         ul.sucsess 
-                            li 
+                            li.top_title
                                 img(src="./images/success_icon.svg", alt="")
                                 span Выезд на место ДТП
-                            li 
+                            li.top_title
                                 img(src="./images/success_icon.svg", alt="")
                                 span Фото и видеофиксация ДТП
                             li 
@@ -47,13 +47,13 @@ html(lang="en")
                         .card_title Стандарт
                         .card_subtitle Только оформление и эвакуация
                         ul.sucsess 
-                            li 
+                            li.top_title
                                 img(src="./images/success_icon.svg", alt="")
                                 span Выезд на место ДТП
-                            li 
+                            li.top_title
                                 img(src="./images/success_icon.svg", alt="")
                                 span Фото и видеофиксация ДТП
-                            li 
+                            li.top_title
                                 img(src="./images/success_icon.svg", alt="")
                                 span Консультация и оформление ДТП
                             li.title_1 
@@ -74,25 +74,25 @@ html(lang="en")
                         .card_title Максимум
                         .card_subtitle Подразумевает комплексную помощь и заключение договора
                         ul.sucsess 
-                            li 
+                            li.top_title
                                 img(src="./images/success_icon.svg", alt="")
                                 span Выезд на место ДТП
-                            li 
+                            li.top_title
                                 img(src="./images/success_icon.svg", alt="")
                                 span Фото и видеофиксация ДТП
-                            li 
+                            li.top_title
                                 img(src="./images/success_icon.svg", alt="")
                                 span Консультация и оформление ДТП
-                            li 
+                            li.top_title
                                 img(src="./images/success_icon.svg", alt="")
                                 span Эвакуация авто с места ДТП для клиентов нашего сервиса
-                            li 
+                            li.top_title
                                 img(src="./images/success_icon.svg", alt="")
                                 span Подготовка документов для обращения в страховую компанию
-                            li 
+                            li.top_title
                                 img(src="./images/success_icon.svg", alt="")
                                 span Юридическое сопровождение по последствиям ДТП
-                            li 
+                            li.top_title
                                 img(src="./images/success_icon.svg", alt="")
                                 span Независимая экспертиза повреждений автомобиля
                             li.title_3 
