--- a/html/css/parts/_media.scss
+++ b/html/css/parts/_media.scss
@@ -106,6 +106,14 @@
                     margin-bottom: 25px;
                 }
             }
+
+            .main_title_2.links_title {
+                margin-left: 0;
+            }
+
+            .links {
+                padding-left: 0;
+            }
         }
     }
 
@@ -549,6 +557,7 @@
 
         .bottom_text_media {
             display: block;
+            margin-bottom: 50px;
         }
     }
 
@@ -1144,7 +1153,7 @@
         .magazine_text {
             margin-bottom: 50px;
             margin-top: 23px;
-            p {
+            p:not(.li) {
                 font-size: 12px;
                 font-style: normal;
                 font-weight: 400;
@@ -1152,7 +1161,7 @@
                 margin-bottom: 27px;
             }
 
-            p:nth-child(2) {
+            p:nth-child(2):not(.li) {
                 margin-bottom: 20px;
             }
     
@@ -1164,7 +1173,7 @@
                 margin-bottom: 7px;
             }
 
-            p {
+            p:not(.li) {
                 margin-bottom: 19px;
             }
 
@@ -1182,8 +1191,8 @@
                 line-height: normal;
             }
 
-            ul, ol {
-                li {
+            .ul, .ol {
+                .li {
                     font-size: 12px;
                     font-style: normal;
                     font-weight: 400;
@@ -1407,8 +1416,8 @@
             }
 
             .text_left {
-                ul, ol {
-                    li {
+                .ul, .ol {
+                    .li {
                         font-size: 12px;
                     }
                 }
