--- a/html/css/style.css
+++ b/html/css/style.css
@@ -430,6 +430,10 @@ textarea[type=text]:focus {
   display: flex;
   align-items: center;
   gap: 28px;
+  transition: 0.2s ease all;
+}
+.accident .main_container .accident_in .accident_card:hover {
+  background: #e0e9fd;
 }
 .accident .main_container .accident_in .accident_card .circle {
   position: absolute;
@@ -462,7 +466,7 @@ textarea[type=text]:focus {
   font-weight: 400;
   line-height: 27px;
 }
-.accident .main_container .accident_in .accident_card p a {
+.accident .main_container .accident_in .accident_card p span {
   color: #1D5DEB;
 }
 
@@ -661,6 +665,7 @@ textarea[type=text]:focus {
 
 .index_bottom_text .bottom_text {
   padding: 35px 0 71px 0;
+  display: none;
 }
 .index_bottom_text .bottom_text p {
   margin: 0 auto 20px auto;
@@ -676,7 +681,7 @@ textarea[type=text]:focus {
   color: #1D5DEB;
 }
 .index_bottom_text .bottom_text_media {
-  display: none;
+  margin-bottom: 91px;
 }
 .index_bottom_text .bottom_text_media .description {
   color: #0B1F33;
@@ -696,19 +701,20 @@ textarea[type=text]:focus {
   line-height: normal;
   margin-bottom: 10px;
 }
-.index_bottom_text .bottom_text_media ul {
+.index_bottom_text .bottom_text_media .ul {
   margin-bottom: 19px;
 }
-.index_bottom_text .bottom_text_media ol {
+.index_bottom_text .bottom_text_media .ol {
   margin-bottom: 16px;
 }
-.index_bottom_text .bottom_text_media ul li, .index_bottom_text .bottom_text_media ol li {
+.index_bottom_text .bottom_text_media .ul .li, .index_bottom_text .bottom_text_media .ol .li {
   color: #0B1F33;
   font-family: "Factor A", sans-serif;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
   line-height: 27px;
+  padding-left: 12px;
 }
 .index_bottom_text .bottom_text_media .main_title {
   color: #0B1F33;
@@ -729,7 +735,7 @@ textarea[type=text]:focus {
   line-height: normal;
   margin-bottom: 9px;
 }
-.index_bottom_text .bottom_text_media .text_left ul li, .index_bottom_text .bottom_text_media .text_left ol li {
+.index_bottom_text .bottom_text_media .ul .li, .index_bottom_text .bottom_text_media .ol .li {
   font-size: 12px;
 }
 
@@ -828,7 +834,7 @@ textarea[type=text]:focus {
   font-weight: 700;
   line-height: normal;
 }
-.magazine_text p {
+.magazine_text p:not(.li) {
   color: #0B1F33;
   font-family: "Factor A", sans-serif;
   font-size: 16px;
@@ -836,9 +842,13 @@ textarea[type=text]:focus {
   font-weight: 400;
   line-height: 27px;
   margin-bottom: 34px;
+  max-width: 842px;
 }
-.magazine_text p span {
+.magazine_text p:not(.li) span {
   color: #1D5DEB;
+}
+.magazine_text p.last {
+  max-width: 944px;
 }
 .magazine_text h3 {
   color: #0B1F33;
@@ -858,6 +868,7 @@ textarea[type=text]:focus {
   font-weight: 400;
   line-height: 27px; /* 168.75% */
   background: linear-gradient(90deg, #FAFBFF 0%, #BECEFF 100%);
+  max-width: 100% !important;
 }
 .magazine_text .magazine_bottom_text {
   margin-bottom: 30px;
@@ -873,7 +884,7 @@ textarea[type=text]:focus {
   line-height: normal;
   margin-bottom: 5px;
 }
-.magazine_text ul, .magazine_text ol {
+.magazine_text .ul, .magazine_text .ol {
   margin-bottom: 19px;
   padding-left: 16px;
 }
@@ -1527,9 +1538,10 @@ textarea[type=text]:focus {
   line-height: 27px;
   border-bottom: 1px dashed;
   transition: 0.2s ease;
+  display: inline-block;
 }
 .newsline .main_container .newsline_content .link:hover {
-  color: #023bb4;
+  color: #99b9fd;
 }
 
 .emergency .main_container {
@@ -1626,6 +1638,7 @@ textarea[type=text]:focus {
 }
 .index_card_in .card_item {
   width: 100%;
+  display: block;
 }
 
 #reference .links {
@@ -1976,12 +1989,12 @@ textarea[type=text]:focus {
   width: 51.1240632806%;
 }
 #price .text_wrapper .text_left .description_top {
-  margin-bottom: 30px;
+  margin-bottom: 19px;
 }
-#price .text_wrapper .text_left ul, #price .text_wrapper .text_left ol {
+#price .text_wrapper .text_left .ul, #price .text_wrapper .text_left .ol {
   padding-left: 13px;
 }
-#price .text_wrapper .text_left ul li, #price .text_wrapper .text_left ol li {
+#price .text_wrapper .text_left .ul .li, #price .text_wrapper .text_left .ol .li {
   color: #0B1F33;
   font-family: "Factor A", sans-serif;
   font-size: 16px;
@@ -1989,10 +2002,8 @@ textarea[type=text]:focus {
   font-weight: 400;
   line-height: 27px;
 }
-#price .text_wrapper .text_left ol, #price .text_wrapper .text_left ol li {
-  list-style: decimal;
-  margin-left: 13px;
-  padding-left: 5px;
+#price .text_wrapper .text_left .ol, #price .text_wrapper .text_left .ol .li {
+  padding-left: 10px;
 }
 #price .text_wrapper .text_right {
   width: 45.0457951707%;
@@ -2069,11 +2080,15 @@ textarea[type=text]:focus {
 #price .text_wrapper .data_list .datas .data_value.free {
   color: #36495B;
 }
+#price .text_wrapper .main_title_2.links_title {
+  margin-left: 20px;
+}
 #price .text_wrapper .links {
   display: flex;
   flex-direction: column;
   gap: 9px;
   margin-top: 5px;
+  padding-left: 20px;
 }
 #price .text_wrapper .links a {
   color: #1D5DEB;
@@ -2198,7 +2213,7 @@ textarea[type=text]:focus {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 27px;
+  line-height: 22px;
 }
 #rates .cards ul li img {
   margin-top: 3px;
@@ -2214,6 +2229,9 @@ textarea[type=text]:focus {
   margin-bottom: 6px;
 }
 #rates .cards ul li.title_3 {
+  margin-bottom: 10px;
+}
+#rates .cards ul li.top_title {
   margin-bottom: 10px;
 }
 #rates .cards .link {
@@ -2252,6 +2270,10 @@ textarea[type=text]:focus {
   left: 50%;
   transform: translateX(-50%);
   z-index: 1;
+}
+
+#examples .card_1 .swiper-wrapper .card_content {
+  display: block;
 }
 
 @media only screen and (min-width: 992px) {
@@ -2522,6 +2544,12 @@ textarea[type=text]:focus {
   }
   #price .text_wrapper .text_left .description_top {
     margin-bottom: 25px;
+  }
+  #price .text_wrapper .main_title_2.links_title {
+    margin-left: 0;
+  }
+  #price .text_wrapper .links {
+    padding-left: 0;
   }
   .assistance .main_container {
     overflow: hidden;
@@ -2861,6 +2889,7 @@ textarea[type=text]:focus {
   }
   .index_bottom_text .bottom_text_media {
     display: block;
+    margin-bottom: 50px;
   }
   #examples h4 {
     font-size: 20px;
@@ -3336,14 +3365,14 @@ textarea[type=text]:focus {
     margin-bottom: 50px;
     margin-top: 23px;
   }
-  .main_container .magazine_text p {
+  .main_container .magazine_text p:not(.li) {
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
     line-height: 18px;
     margin-bottom: 27px;
   }
-  .main_container .magazine_text p:nth-child(2) {
+  .main_container .magazine_text p:nth-child(2):not(.li) {
     margin-bottom: 20px;
   }
   .main_container .magazine_text h2 {
@@ -3353,7 +3382,7 @@ textarea[type=text]:focus {
     line-height: normal;
     margin-bottom: 7px;
   }
-  .main_container .magazine_text p {
+  .main_container .magazine_text p:not(.li) {
     margin-bottom: 19px;
   }
   .main_container .magazine_text h3 {
@@ -3368,7 +3397,7 @@ textarea[type=text]:focus {
     font-weight: 400;
     line-height: normal;
   }
-  .main_container .magazine_text ul li, .main_container .magazine_text ol li {
+  .main_container .magazine_text .ul .li, .main_container .magazine_text .ol .li {
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
@@ -3530,7 +3559,7 @@ textarea[type=text]:focus {
   #price .text_wrapper .main_title_2 {
     font-size: 16px;
   }
-  #price .text_wrapper .text_left ul li, #price .text_wrapper .text_left ol li {
+  #price .text_wrapper .text_left .ul .li, #price .text_wrapper .text_left .ol .li {
     font-size: 12px;
   }
   #price .text_wrapper .data_list {
