--- a/html/css/style.scss
+++ b/html/css/style.scss
@@ -282,6 +282,11 @@
                 display: flex;
                 align-items: center;
                 gap: 28px;
+                transition: .2s ease all;
+
+                &:hover {
+                    background: #e0e9fd;
+                }
 
                 .circle {
                     position: absolute;
@@ -316,7 +321,7 @@
                     font-weight: 400;
                     line-height: 27px;
 
-                    a {
+                    span {
                         color: #1D5DEB;
                     }
                 }
@@ -555,6 +560,8 @@
     
     .bottom_text {
         padding: 35px 0 71px 0;
+        display: none;
+
         p {
             margin: 0 auto 20px auto;
             max-width: 876px;
@@ -573,7 +580,9 @@
     }
 
     .bottom_text_media {
-        display: none;
+        // display: none;
+        margin-bottom: 91px;
+
         .description {
             color: #0B1F33;
             font-family: $Factor;
@@ -594,22 +603,23 @@
             margin-bottom: 10px;
         }
 
-        ul {
+        .ul {
             margin-bottom: 19px;
         }
 
-        ol {
+        .ol {
             margin-bottom: 16px;
         }
 
-        ul , ol {
-            li {
+        .ul , .ol {
+            .li {
                 color: #0B1F33;
                 font-family: $Factor;
                 font-size: 12px;
                 font-style: normal;
                 font-weight: 400;
                 line-height: 27px;
+                padding-left: 12px;
             }
         }
 
@@ -634,13 +644,12 @@
             margin-bottom: 9px;
         }
 
-        .text_left {
-            ul, ol {
-                li {
-                    font-size: 12px;
-                }
+        .ul, .ol {
+            .li {
+                font-size: 12px;
             }
         }
+        
     }
 }
 
@@ -753,7 +762,7 @@
         font-weight: 700;
         line-height: normal;
     }
-    p {
+    p:not(.li) {
         color: #0B1F33;
         font-family: $Factor;
         font-size: 16px;
@@ -761,11 +770,17 @@
         font-weight: 400;
         line-height: 27px;
         margin-bottom: 34px;
+        max-width: 842px;
 			
-				span {
+		span {
             color: #1D5DEB;
         }
     }
+
+    p.last {
+        max-width: 944px;
+    }
+
 	h3 {
         color: $main_text;
         font-family: $Factor;
@@ -785,6 +800,7 @@
         font-weight: 400;
         line-height: 27px; /* 168.75% */
         background: linear-gradient(90deg, #FAFBFF 0%, #BECEFF 100%);
+        max-width: 100% !important;
     }
 
     .magazine_bottom_text {
@@ -803,7 +819,7 @@
         margin-bottom: 5px;
     }
 
-    ul,ol {
+    .ul,.ol {
         margin-bottom: 19px;
         padding-left: 16px;
     }
@@ -1537,9 +1553,10 @@
                 line-height: 27px;
                 border-bottom: 1px dashed;
                 transition: .2s ease;
+                display: inline-block;
 
                 &:hover {
-                    color: #023bb4;
+                    color: #99b9fd;
                 }
             }
         }
@@ -1651,6 +1668,7 @@
 
     .card_item {
         width: 100%;
+        display: block;
     }
 }
 
@@ -2070,13 +2088,13 @@
             width: calc(100% * 614px / 1201px);
 
             .description_top {
-                margin-bottom: 30px;
+                margin-bottom: 19px;
             }
 
-            ul, ol {
+            .ul, .ol {
                 padding-left: 13px;
 
-                li {
+                .li {
                     color: #0B1F33;
                     font-family: "Factor A", sans-serif;
                     font-size: 16px;
@@ -2086,10 +2104,8 @@
                 }
             }
 
-            ol, ol li {
-                list-style: decimal;
-                margin-left: 13px;
-                padding-left: 5px;
+            .ol, .ol .li {
+                padding-left: 10px;
             }
         }
         
@@ -2180,11 +2196,16 @@
             }
         }
 
+        .main_title_2.links_title {
+            margin-left: 20px;
+        }
+
         .links {
             display: flex;
             flex-direction: column;
             gap: 9px;
             margin-top: 5px;
+            padding-left: 20px;
 
             a {
                 color: #1D5DEB;
@@ -2326,7 +2347,7 @@
                 font-size: 16px;
                 font-style: normal;
                 font-weight: 400;
-                line-height: 27px;
+                line-height: 22px;
 
                 img {
                     margin-top: 3px;
@@ -2347,6 +2368,11 @@
             }
 
             li.title_3 {
+                margin-bottom: 10px;
+            }
+            
+
+            li.top_title {
                 margin-bottom: 10px;
             }
         }
@@ -2389,6 +2415,16 @@
             left: 50%;
             transform: translateX(-50%);
             z-index: 1;
+        }
+    }
+}
+
+#examples {
+    .card_1 {
+        .swiper-wrapper {
+            .card_content {
+                display: block;
+            }
         }
     }
 }
