--- a/pages/index.pug
+++ b/pages/index.pug
@@ -232,34 +232,58 @@ html(lang="en")
 
                 .bg_number 50-50-50
 
-        #examples.examples 
+        #examples.examples.example_index
             .main_container.example_main_container
                 h4 Примеры работы комиссаров и ремонта после ДТП
                 p Здесь вы найдете примеры работы наших комиссаров, а также примеры восстановления авто после ДТП в нашем собственном автосервисе.
                 .tab.d-flex.justify-content-center.align-items-center
-                    a.active(href="#") Работа аваркомов
-                    a(href="#") Ремонт после ДТП 
-                .swiper.card_1.card_end 
-                    .swiper-wrapper
-                        .swiper-slide
-                            a(href="#").card_content 
-                                img(src="./images/example_slide_11.png", alt="")
-                                .text Часто бывает, что даже из-за мелких царапин водители не могут договориться самостоятельно, тогда по помощь приходит (приезжает) наш человек. Если без ГИБДД нельзя, то вызовем из нужного района.
+                    a.active(data-id="pills-home") Работа аваркомов
+                    a(data-id="pills-profile") Ремонт после ДТП 
+                .tab-content#pills-tabContent
+                    .tab-pane.fade.show.active#pills-home(role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0")
+                        .swiper.card_1.card_end 
+                            .swiper-wrapper
+                                .swiper-slide
+                                    a(href="#").card_content 
+                                        img(src="./images/example_slide_11.png", alt="")
+                                        .text Часто бывает, что даже из-за мелких царапин водители не могут договориться самостоятельно, тогда по помощь приходит (приезжает) наш человек. Если без ГИБДД нельзя, то вызовем из нужного района.
 
-                        .swiper-slide
-                            a(href="#").card_content 
-                                img(src="./images/example_slide_22.png", alt="")
-                                .text 
-                                    |Совместная работа с ГИБДД, скорой
-                                    |и участниками ДТП. Эвакуированы
-                                    |все авто, оформлено честно,
-                                    |виновным признано. В последствии
-                                    |оценка ущерба и помощь в
-                                    | «выбивании» КАСКО за «тотал».
-                        .swiper-slide
-                            a(href="#").card_content 
-                                img(src="./images/example_slide_33.png", alt="")
-                                .text  Оформлено без лишних эмоций и без привлечения ГИБДД по европротоколу. Нас вызвал виновник, при оформлении вину признал. Эвакуация, помощь со страховой, ремонт на нашем СТО.                                
+                                .swiper-slide
+                                    a(href="#").card_content 
+                                        img(src="./images/example_slide_22.png", alt="")
+                                        .text 
+                                            |Совместная работа с ГИБДД, скорой
+                                            |и участниками ДТП. Эвакуированы
+                                            |все авто, оформлено честно,
+                                            |виновным признано. В последствии
+                                            |оценка ущерба и помощь в
+                                            | «выбивании» КАСКО за «тотал».
+                                .swiper-slide
+                                    a(href="#").card_content 
+                                        img(src="./images/example_slide_33.png", alt="")
+                                        .text  Оформлено без лишних эмоций и без привлечения ГИБДД по европротоколу. Нас вызвал виновник, при оформлении вину признал. Эвакуация, помощь со страховой, ремонт на нашем СТО.                                
+                    .tab-pane.fade#pills-profile(role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0")
+                        .swiper.card_1.card_end 
+                            .swiper-wrapper
+                                .swiper-slide
+                                    a(href="#").card_content 
+                                        img(src="./images/example_slide_11.png", alt="")
+                                        .text Часто бывает, что даже из-за мелких царапин водители не могут договориться самостоятельно, тогда по помощь приходит (приезжает) наш человек. Если без ГИБДД нельзя, то вызовем из нужного района.
+
+                                .swiper-slide
+                                    a(href="#").card_content 
+                                        img(src="./images/example_slide_22.png", alt="")
+                                        .text 
+                                            |Совместная работа с ГИБДД, скорой
+                                            |и участниками ДТП. Эвакуированы
+                                            |все авто, оформлено честно,
+                                            |виновным признано. В последствии
+                                            |оценка ущерба и помощь в
+                                            | «выбивании» КАСКО за «тотал».
+                                .swiper-slide
+                                    a(href="#").card_content 
+                                        img(src="./images/example_slide_33.png", alt="")
+                                        .text  Оформлено без лишних эмоций и без привлечения ГИБДД по европротоколу. Нас вызвал виновник, при оформлении вину признал. Эвакуация, помощь со страховой, ремонт на нашем СТО.                                
                 .example_card_1_pagination
                 .examples_btns 
                     a(href="#") Еще примеры
@@ -330,14 +354,6 @@ html(lang="en")
             
         .main_container.index_bottom_text
             img(src="./images/index_bottom_img.png", alt="") 
-            .bottom_text 
-                p 
-                    | Обращаясь в службу помощи при ДТП «50-50-50», вы получаете квалифицированную помощь независимо от степени тяжести аварии. Наши сотрудники готовы предложить свои услуги на любом этапе оформления документов и решения необходимых вопросов. Всего через 15 минут после звонка, к вам прибудет специалист, эксперт по ДТП. Если вы 
-                    span арендовали авто в Калининграде
-                    | и попали на нем в ДТП - звоните! Мы поможем и в таком случае, чтобы владельцы автопроката вас не провели.
-
-                p 
-                    | Нередко случаются ситуации, когда авария незначительная и без пострадавших, но при этом стороны не могут прийти к соглашению, кто виновен. Чтобы не привлекать дорожную инспекцию к ситуации, стоит обратиться к аварийному комиссару. Опытный специалист проведет оценку ситуации и проработает все дорожные улики и свидетельства. Таким образом, будет установлен ущерб, причиненным сторонам. Проще говоря, такой спецпосредник поможет сторонам в конце концов справедливо договориться.
             .bottom_text_media 
                 h2.main_title Стиль и размер h2-заголовка
                 p.description Идейные соображения высшего порядка, а также сложившаяся структура организации в значительной степени обуславливает создание существенных финансовых и административных условий. Повседневная практика показывает, что рамки и место обучения кадров требуют определения и уточнения существенных финансовых и административных условий.
